@@ -54,7 +54,6 @@ RenderTextControlSingleLine::RenderTextControlSingleLine(Node* node)
     , m_searchEventTimer(this, &RenderTextControlSingleLine::searchEventTimerFired)
     , m_searchPopup(0)
 {
-    ASSERT(node->hasTagName(inputTag));
 }
 
 RenderTextControlSingleLine::~RenderTextControlSingleLine()
