@@ -1,5 +1,15 @@
 2008-12-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>
 
+        Rubber-stamped by Antti Koivisto.
+        Oops, remove some last minute ASSERTS that are obviously wrong.
+
+        * rendering/RenderTextControlMultiLine.cpp:
+        (WebCore::RenderTextControlMultiLine::RenderTextControlMultiLine):
+        * rendering/RenderTextControlSingleLine.cpp:
+        (WebCore::RenderTextControlSingleLine::RenderTextControlSingleLine):
+
+2008-12-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>
+
         Reviewed by Antti Koivisto.
 
         Fixes: https://bugs.webkit.org/show_bug.cgi?id=23015
